db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/inside: "true"
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: ojs
        - name: MYSQL_PASSWORD
          value: ojsPwd
        - name: MYSQL_ROOT_PASSWORD
          value: ojsPwd
        - name: MYSQL_USER
          value: ojs
        image: mariadb:10.2
        imagePullPolicy: ""
        name: ojs-db
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
