ojs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ojs
  name: ojs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ojs
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/inside: "true"
        io.kompose.service: ojs
    spec:
      containers:
      - image: celosop/ojsufrpe:3
        imagePullPolicy: ""
        name: ojs-app
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
      hostname: ojs
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
