ojsufrpe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ojs
  labels:
    app: ojs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ojs
  template:
    metadata:
      labels:
        app: ojs
    spec:
      containers:
        - name: ojs
          image: celosop/ojsufrpe:3
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: ojs-service
spec:
  ports:
  - port: 80
    protocol: TCP
    nodePort: 31234
  selector:
    app: ojs
  type: NodePort
