inside-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: inside
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/inside: "true"
  podSelector:
    matchLabels:
      io.kompose.network/inside: "true"
