ojsufrpekompose.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ojs
  name: ojs
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 80
    nodePort: 31234
  - name: "443"
    port: 443
    targetPort: 443
  selector:
    io.kompose.service: ojs
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/inside: "true"
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: ojs
        - name: MYSQL_PASSWORD
          value: ojsPwd
        - name: MYSQL_ROOT_PASSWORD
          value: ojsPwd
        - name: MYSQL_USER
          value: ojs
        image: mariadb:10.2
        imagePullPolicy: ""
        name: ojs-db
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}

---

apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: inside
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/inside: "true"
  podSelector:
    matchLabels:
      io.kompose.network/inside: "true"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ojs
  name: ojs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ojs
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/inside: "true"
        io.kompose.service: ojs
    spec:
      containers:
      - image: celosop/ojsufrpe:3
        imagePullPolicy: ""
        name: ojs-app
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
      hostname: ojs
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}

---

apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: inside
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/inside: "true"
  podSelector:
    matchLabels:
      io.kompose.network/inside: "true"
